--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>$BRUCEpepe</title>
+    <title>$BRUCEpepeai</title>
     <meta
         content="Enter the realm of meme culture mastery with $BRUCE! Where EAST meets WEST and unity of PEPES from around the world.Diamond fisting BRUCE to 1B! Don&#x27;t kick yourself for fading the BRUCE! Be like WATAA and join the movement!"
         name="description" />
@@ -47,7 +47,7 @@
             target="_blank" class="social-button w-inline-block"><img
                 src="https://uploads-ssl.webflow.com/6463f8644c8a71f455cc24a1/6464013a7863d620bcd5173b_twi.svg"
                 loading="lazy" alt="" /></a><a id="w-node-_942e9e02-2dad-148c-2213-969d304d6b93-55cc249f"
-            href="https://t.me/brucepepando" target="_blank" class="social-button w-inline-block"><img
+            href="https://t.me/brucepepeai" target="_blank" class="social-button w-inline-block"><img
                 src="https://uploads-ssl.webflow.com/6463f8644c8a71f455cc24a1/6464013a293edb4924c57324_tel.svg"
                 loading="lazy" alt="" /></a><a id="w-node-c80a4139-633e-e3e1-7452-0ccc172ec31e-55cc249f"
             href="https://www.dextools.io/app/en/ether/pair-explorer/0xa89ffead46224903534b8df7cd09caf35f19e23f"
@@ -74,7 +74,7 @@
     <div data-animation="default" class="navbar w-nav" data-easing2="ease" data-easing="ease" data-collapse="medium"
         style="opacity:0" data-w-id="154226d1-7ba9-bf5b-4eb9-e7dd7cad9c20" role="banner" data-duration="400">
         <div class="container-2 w-container"><a href="#" class="brand-2 w-nav-brand">
-                <div class="icon-bar">$BRUCE</div>
+                <div class="icon-bar">$BRUCEAI</div>
                 <div class="pepe-small">pepe</div>
             </a>
             <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" aria-current="page"
@@ -92,13 +92,13 @@
                 <div class="column w-col w-col-6 w-col-small-6">
                     <div class="div-block-8">
                         <div data-w-id="b0f2ae4f-7d41-2a1d-903d-745c97312501" style="opacity:0" class="text-block">
-                            $BRUCE </div>
+                            $BRUCEAI </div>
                     </div>
                     <div data-w-id="15491e34-656e-5b85-2053-782bf30b3816" style="opacity:0" class="scribble">pepe</div>
                     <div data-w-id="1374b18b-b37b-1c34-2480-7eccefa848a9" style="opacity:0" class="subheader">Enter the
-                        realm of meme culture mastery with $BRUCE! Where EAST meets WEST and unity of PEPES from around
+                        realm of meme culture mastery with $BRUCEAI! Where EAST meets WEST and unity of PEPES from around
                         the world.<br /><br />Diamond fisting BRUCE to 1B! Don&#x27;t kick yourself for fading the
-                        BRUCE! Be like WATAA and join the movement!</div>
+                        $BRUCEAI! Be like WATAA and join the movement!</div>
                     <div class="space"></div>
                     
                 </div>
@@ -124,7 +124,7 @@
     <section class="section-2 black wf-section">
         <div class="container small">
             <div data-w-id="adf90fd2-a2fa-1d16-e033-0575f6ac93a5" style="opacity:0" class="pha yellow center"><a
-                    href="#" class="link">$BRUCE</a> has ignited! 
+                    href="#" class="link">$$BRUCEAI</a> has ignited! 
                 <br /><br />Remember our stealth launch ?<br /> at Pump.fun
                <br /><br />Curious? Check website:<br /> <br />‍<a
                     href="https://pump.fun" target="_blank"
@@ -144,7 +144,7 @@
                 data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg"
                 data-duration="0"></div>
         </div>
-        <div class="superbig">BRUCE</div>
+        <div class="superbig">$BRUCEAI</div>
     </section>
     <section class="section-3 green wf-section">
         <div class="container">
@@ -190,7 +190,7 @@
                     <div class="tittle">Get some SOL</div>
                     <div class="pharaghrap">Create an account on your chosen cryptocurrency exchange, verify it, and
                         deposit your funds. Grab some SOL, send to your Phantom wallet address, and get ready for the
-                        $BRUCE ride! <br /></div>
+                        $$BRUCEAI ride! <br /></div>
                     <div class="button-space"></div><a
                         href="https://jup.ag/swap/USDC-SOL"
                         target="_blank" class="button w-button">GO TO JUP.AG</a>
@@ -200,9 +200,9 @@
                         src="./image/pump.png"
                         loading="lazy" style="opacity:0" data-w-id="88559ccc-647c-4182-59e8-44db80dd1c25" alt=""
                         class="image-6" />
-                    <div class="tittle">Get $BRUCE PEPE</div>
-                    <div class="pharaghrap">Visit pump.fun, connect your Phantom wallet, and enter the $BRUCE token address:
-                        Select $BRUCE, confirm your transaction, and join the ranks of the unstoppable!  <p></p><br /></div>
+                    <div class="tittle">Get $BRUCEAI PEPE</div>
+                    <div class="pharaghrap">Visit pump.fun, connect your Phantom wallet, and enter the $BRUCEAI token address:
+                        Select $BRUCEAI, confirm your transaction, and join the ranks of the unstoppable!  <p></p><br /></div>
                     <div class="button-space"></div><a
                         href="https://pump.fun/A1pYKRQ3aJVs25mPz4Ac4J2JMTXTbVYbCw1BjZjELWEt"
                         target="_blank" class="button w-button">SWAP FOR SOL</a>
@@ -225,7 +225,7 @@
                 <div id="w-node-_2d262d62-853f-eb51-e43c-baf939ce2082-55cc249f" class="token">
                     <div data-w-id="2d262d62-853f-eb51-e43c-baf939ce2083" style="opacity:0" class="number">3%</div>
                     <div data-w-id="2d262d62-853f-eb51-e43c-baf939ce2085" style="opacity:0" class="pha center">FUTURE
-                        HOLDERS $BRUCE</div>
+                        HOLDERS $BRUCEAI</div>
                 </div>
                 <div id="w-node-d8d05b66-6a4d-e307-0891-5107dbcf94d7-55cc249f" class="token">
                     <div data-w-id="d8d05b66-6a4d-e307-0891-5107dbcf94d8" style="opacity:0" class="number">3%</div>
@@ -273,11 +273,11 @@
                         <div data-w-id="2e20f752-1a9a-9f72-574b-d037db658e49" style="opacity:0"
                             class="pharaghrap left-vig">Campaign<br /></div>
                         <div data-w-id="2e20f752-1a9a-9f72-574b-d037db658e4c" style="opacity:0"
-                            class="pharaghrap left-vig">Whiltelist activities for BRUCE Holders<br /></div>
+                            class="pharaghrap left-vig">Whiltelist activities for $BRUCEAI Holders<br /></div>
                         <div data-w-id="2e20f752-1a9a-9f72-574b-d037db658e4f" style="opacity:0"
                             class="pharaghrap left-vig">Push on trending socials<br /></div>
                         <div data-w-id="2e20f752-1a9a-9f72-574b-d037db658e52" style="opacity:0"
-                            class="pharaghrap left-vig">$BRUCE (3% supply reserved for BRUCE holders)<br /></div>
+                            class="pharaghrap left-vig">$BRUCE (3% supply reserved for $BRUCEAI holders)<br /></div>
                     </div>
                 </div>
                 <div class="columns-3 w-row">
@@ -314,7 +314,7 @@
                     target="_blank" class="social-button w-inline-block"><img
                         src="https://uploads-ssl.webflow.com/6463f8644c8a71f455cc24a1/6463f8644c8a71f455cc24b4_twitter.svg"
                         loading="lazy" alt="" /></a><a id="w-node-_0641d6a7-a7af-8762-e0f0-9d7a1f29443f-55cc249f"
-                    href="https://t.me/brucepepando" target="_blank" class="social-button w-inline-block"><img
+                    href="https://t.me/brucepepeai" target="_blank" class="social-button w-inline-block"><img
                         src="https://uploads-ssl.webflow.com/6463f8644c8a71f455cc24a1/6463f8644c8a71f455cc24b5_telegram.svg"
                         loading="lazy" alt="" /></a></div>
         </div>
